added javascrip chess board drawing for blank and non-blank chess board

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
 				<div class="container">
 					<div class="row">
 						<div id="chess-board-container">
-						</div>
+                            <div id="chess-board">
+                                <div id="p-chess"></div>
+                                <div id="s-chess"></div>
+                            </div>
+                        </div>
 					</div>
 				</div>
 			</div>
@@ -129,8 +133,9 @@
 			
 		<!-- Javascript files -->
 		<!-- jQuery -->
-		<script src="js/jquery.js"></script>
-		<!-- Bootstrap JS -->
+        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>-->
+        <script src="js/jquery.js"></script>
+        <!-- Bootstrap JS -->
 		<script src="js/bootstrap.min.js"></script>
 		<!-- Respond JS for IE8 -->
 		<script src="js/respond.min.js"></script>
