fixed bug with incorrect chess board rendering when board size is an odd value.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="logo">
-								<h1><a href="#">Genetic Algorithms <span class="tblue">.</span></a></h1>
+								<h1><a href="#">Genetic Algorithms<span class="tblue">.</span></a></h1>
 							</div>
 						</div>
 						<div class="navigation pull-right">
@@ -71,11 +71,11 @@
 		<!-- Top Ends -->
 
 		<!-- Feature Starts -->
-		<div class="features">
+		<div id="introduction" class="features">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<div class="feature-title text-center">
+						<div  class="feature-title text-center">
 							<h3>What are Genetic Algorithms?</h3>
 							<p>Nullam sed sagittis ligula, sit amet luctus nisl. Pellentesque ultricies, nulla et congue ullamcorper, sem lorem luctus elit, ac faucibus erat libero nec justo.</p>
 						</div>
@@ -92,7 +92,7 @@
 			<div class="container">
 
 				<!-- shot1-->
-				<div class="row">
+				<div id="problem" class="row">
 					<div class="shotcontent">
 						<h3>The infamous<span class="text-muted"> Eight Queens</span> problem</h3>
 							<p class="shot-para">Dapibus vitae velit. Pellentesque vel venenatis leo, vel egestas velit.In ullamcorper dolor ut odio facilisis tempus. Duis id erat erat. </p> 
@@ -102,7 +102,7 @@
 				<!-- shot1 ends -->
 				
 				<!-- shot2 -->
-				<div class="row">
+				<div id="solution" class="row">
 					<div class="shotcontent">
 						<h3>How we solved<span class="text-muted"> The Eight Queens</span> problem</h3>
 							<p class="shot-para">Dapibus vitae velit. Pellentesque vel venenatis leo, vel egestas velit.In ullamcorper dolor ut odio facilisis tempus. Duis id erat erat. </p> 
@@ -118,7 +118,7 @@
 		
 		<!-- Footer starts -->
 		<footer>
-			<div class="container">
+			<div id="aboutus" class="container">
 				
 				<div class="row">
 					<div class="footer-link">
