--- a/index.html
+++ b/index.html
@@ -1,147 +1,191 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<!-- Title here -->
-		<title>Genetic Algorithms</title>
-		<!-- Description, Keywords and Author -->
-		<meta name="description" content="Your description">
-		<meta name="keywords" content="Your,Keywords">
-		<meta name="author" content="Sajith, Vimuth, Tharindu, Mihil">
-		
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
-		
-		<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic' rel='stylesheet' type='text/css'>
-		
-		
-		<!-- Styles -->
-		<!-- Bootstrap CSS -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<!-- Font awesome CSS -->
-		<link href="css/font-awesome.min.css" rel="stylesheet">		
-		<!-- Custom CSS -->
-		<link href="css/style.css" rel="stylesheet">
-		
-		<!-- Favicon -->
-		<link rel="shortcut icon" href="#">
-	</head>
-	
-	<body>
-		
-		<!-- Top Starts -->
-		<div class="top">
-			
-			
-			<!-- Header Starts -->
-			<header>
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6">
-							<div class="logo">
-								<h1><a href="#">Genetic Algorithms<span class="tblue">.</span></a></h1>
-							</div>
-						</div>
-						<div class="navigation pull-right">
-							<a href="#introduction">Introduction</a>
-							<a href="#problem">Problem</a>
-							<a href="#solution">Solution</a>
-							<a href="#aboutus">About Us</a>
-						</div>
-					</div>
-				</div>
-			</header>
-			<!-- Header Ends -->
-			
-			<!-- Hero starts -->
-			<div class="hero">
-				<div class="container">
-					<div class="row">
-						<div id="chess-board-container">
-                            <div id="chess-board">
-                                <div id="p-chess"></div>
-                                <div id="s-chess"></div>
+<head>
+    <!-- Title here -->
+    <title>Genetic Algorithms</title>
+    <!-- Description, Keywords and Author -->
+    <meta name="description" content="Your description">
+    <meta name="keywords" content="Your,Keywords">
+    <meta name="author" content="Sajith, Vimuth, Tharindu, Mihil">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+
+    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic' rel='stylesheet' type='text/css'>
+
+
+    <!-- Styles -->
+    <!-- Bootstrap CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <!-- Font awesome CSS -->
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="#">
+</head>
+
+<body>
+<div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Incorrect Input</h4>
+            </div>
+            <div class="modal-body">
+                Initial positions are not in correct format or doesn't match with the number of queens. Please check
+                again.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
+
+
+<!-- Top Starts -->
+<div class="top">
+
+
+    <!-- Header Starts -->
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="logo">
+                        <h1><a href="#">Genetic Algorithms<span class="tblue">.</span></a></h1>
+                    </div>
+                </div>
+                <div class="navigation pull-right">
+                    <a href="#introduction">Introduction</a>
+                    <a href="#problem">Problem</a>
+                    <a href="#solution">Solution</a>
+                    <a href="#aboutus">About Us</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Header Ends -->
+
+    <!-- Hero starts -->
+    <div class="hero">
+        <div class="container">
+            <div class="row">
+                <div id="chess-board-container">
+                    <div id="chess-board">
+                        <div id="p-chess"></div>
+                        <div id="s-chess"></div>
+                    </div>
+                    <div id="input-form">
+                        <form class="form-inline" role="form">
+                            <div class="form-group">
+                                <label>Number of Queens</label>
+                                <input type="number" min="8" max="20" step="1" class="form-control" id="numOfQueens"
+                                       placeholder="8" value="8">
                             </div>
-                        </div>
-					</div>
-				</div>
-			</div>
-			<!-- Hero ends -->
-		</div>
-		<!-- Top Ends -->
+                            <div class="form-group">
+                                <label>Initial Position</label>
+                                <input type="text" class="form-control" id="initialPosition"
+                                       placeholder="0,3,5,2,3,4,7,5,6" value="0,3,5,2,3,4,7,5">
+                            </div>
+                            <div id="btn-apply" class="btn btn-default">Apply</div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Hero ends -->
+</div>
+<!-- Top Ends -->
 
-		<!-- Feature Starts -->
-		<div id="introduction" class="features">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div  class="feature-title text-center">
-							<h3>What are Genetic Algorithms?</h3>
-							<p>Nullam sed sagittis ligula, sit amet luctus nisl. Pellentesque ultricies, nulla et congue ullamcorper, sem lorem luctus elit, ac faucibus erat libero nec justo.</p>
-						</div>
-					</div>
-				</div>
-				<hr>
-			</div>
-		</div>
-		
-		<!-- Feature Ends -->
-		
-		<!-- Shots starts -->
-		<div class="shots">
-			<div class="container">
+<!-- Feature Starts -->
+<div id="introduction" class="features">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="feature-title text-center">
+                    <h3>What are Genetic Algorithms?</h3>
 
-				<!-- shot1-->
-				<div id="problem" class="row">
-					<div class="shotcontent">
-						<h3>The infamous<span class="text-muted"> Eight Queens</span> problem</h3>
-							<p class="shot-para">Dapibus vitae velit. Pellentesque vel venenatis leo, vel egestas velit.In ullamcorper dolor ut odio facilisis tempus. Duis id erat erat. </p> 
-					</div>
-				</div>
-				<hr>
-				<!-- shot1 ends -->
-				
-				<!-- shot2 -->
-				<div id="solution" class="row">
-					<div class="shotcontent">
-						<h3>How we solved<span class="text-muted"> The Eight Queens</span> problem</h3>
-							<p class="shot-para">Dapibus vitae velit. Pellentesque vel venenatis leo, vel egestas velit.In ullamcorper dolor ut odio facilisis tempus. Duis id erat erat. </p> 
-					</div>
-				</div>
-				<hr>
-				<!-- shot2 ends -->
-			</div>
-			
-		</div>
-		
-		<!-- Shots Ends -->	
-		
-		<!-- Footer starts -->
-		<footer>
-			<div id="aboutus" class="container">
-				
-				<div class="row">
-					<div class="footer-link">
-						<h5>About Us</h5>
-							<p class="shot-para">Dapibus vitae velit. Pellentesque vel venenatis leo, vel egestas velit.In ullamcorper dolor ut odio facilisis tempus. Duis id erat erat. </p> 
-							<hr>
-					</div>
-				</div>
-			</div>
-		</footer>
-		<!-- Footer Ends -->
-			
-		<!-- Javascript files -->
-		<!-- jQuery -->
-        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>-->
-        <script src="js/jquery.js"></script>
-        <!-- Bootstrap JS -->
-		<script src="js/bootstrap.min.js"></script>
-		<!-- Respond JS for IE8 -->
-		<script src="js/respond.min.js"></script>
-		<!-- HTML5 Support for IE -->
-		<script src="js/html5shiv.js"></script>
-		<!-- Custom JS -->
-		<script src="js/custom.js"></script>
-	</body>	
+                    <p>Nullam sed sagittis ligula, sit amet luctus nisl. Pellentesque ultricies, nulla et congue
+                        ullamcorper, sem lorem luctus elit, ac faucibus erat libero nec justo.</p>
+                </div>
+            </div>
+        </div>
+        <hr>
+    </div>
+</div>
+
+<!-- Feature Ends -->
+
+<!-- Shots starts -->
+<div class="shots">
+    <div class="container">
+
+        <!-- shot1-->
+        <div id="problem" class="row">
+            <div class="shotcontent">
+                <h3>The infamous<span class="text-muted"> Eight Queens</span> problem</h3>
+
+                <p class="shot-para">Dapibus vitae velit. Pellentesque vel venenatis leo, vel egestas velit.In
+                    ullamcorper dolor ut odio facilisis tempus. Duis id erat erat. </p>
+            </div>
+        </div>
+        <hr>
+        <!-- shot1 ends -->
+
+        <!-- shot2 -->
+        <div id="solution" class="row">
+            <div class="shotcontent">
+                <h3>How we solved<span class="text-muted"> The Eight Queens</span> problem</h3>
+
+                <p class="shot-para">Dapibus vitae velit. Pellentesque vel venenatis leo, vel egestas velit.In
+                    ullamcorper dolor ut odio facilisis tempus. Duis id erat erat. </p>
+            </div>
+        </div>
+        <hr>
+        <!-- shot2 ends -->
+    </div>
+
+</div>
+
+<!-- Shots Ends -->
+
+<!-- Footer starts -->
+<footer>
+    <div id="aboutus" class="container">
+
+        <div class="row">
+            <div class="footer-link">
+                <h5>About Us</h5>
+
+                <p class="shot-para">Dapibus vitae velit. Pellentesque vel venenatis leo, vel egestas velit.In
+                    ullamcorper dolor ut odio facilisis tempus. Duis id erat erat. </p>
+                <hr>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- Footer Ends -->
+
+<!-- Javascript files -->
+<!-- jQuery -->
+<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>-->
+<script src="js/jquery.js"></script>
+<!-- Bootstrap JS -->
+<script src="js/bootstrap.js"></script>
+<!-- Respond JS for IE8 -->
+<script src="js/respond.min.js"></script>
+<!-- HTML5 Support for IE -->
+<script src="js/html5shiv.js"></script>
+<!-- Custom JS -->
+<script src="js/custom.js"></script>
+</body>
 </html>
