Intigrated backend algorithm with ajax

--- a/index.html
+++ b/index.html
@@ -91,11 +91,6 @@
                                        placeholder="8" value="8">
                             </div>
                             <div class="form-group">
-                                <label>Initial Position</label>
-                                <input type="text" class="form-control" id="initialPosition"
-                                       placeholder="5,2,4,7,0,3,1,6" value="5,2,4,7,0,3,1,6">
-                            </div>
-                            <div class="form-group">
                                 <label>Mutation Probability</label>
                                 <input type="number" min="0" max="1" step=".001" class="form-control" id="mutationProb"
                                        placeholder="0.001" value="0.001">
@@ -113,6 +108,7 @@
                             <div id="btn-apply" class="btn btn-default">Apply</div>
                         </form>
                     </div>
+                    <div id="stats"></div>
                 </div>
             </div>
         </div>
