added data store and download feature

--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                                 <input type="number"  min="1" class="form-control" id="popSize"
                                        placeholder="10" value="10">
                             </div>
-                            <div id="btn-apply" class="btn btn-default">Apply</div>
+                            <div id="btn-apply" class="btn btn-default">Solve</div>
+                            <a class="btn btn-default" href="/download">Download</a>
                         </form>
                     </div>
                     <div id="stats"></div>
