--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Incorrect Input</h4>
+                <h4 class="modal-title" id="myModalLabel">Oops!! Something is wrong Jimmy</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="model-body-content">
                 Initial positions are not in correct format or doesn't match with the number of queens. Please check
                 again.
             </div>
@@ -91,7 +91,7 @@
                                        placeholder="0.001" value="0.001">
                             </div>
                             <div class="form-group">
-                                <label>Max. Iteration</label>
+                                <label>Max. Iterations</label>
                                 <input type="number" min="0" class="form-control" id="maxIteration"
                                        placeholder="1000000" value="1000000">
                             </div>
@@ -118,9 +118,11 @@
         <div class="row">
             <div class="feature-title">
                 <h3>What are Genetic Algorithms?</h3>
+                <h5>" Computer programs that evolve in ways that resemble natural selection, can solve complex problems
+                    even their creators do not fully understand. "</h5>
 
                 <p>Genetic Algorithms (GAs) are adaptive methods which may be used to solve search and optimization
-                    problems.They are based on the genetic processes of biological organisms. Over many generations,
+                    problems. They are based on the genetic processes of biological organisms. Over many generations,
                     natural populations evolve according to the principles of natural selection and "survival of the
                     fittest", first clearly stated by Charles Darwin in The Origin of Species . By mimicking this
                     process, genetic algorithms are able to "evolve" solutions to real world problems, if they have
@@ -380,14 +382,16 @@
 <footer>
     <div id="aboutus" class="container">
         <h3>About Us</h3>
+
         <p>We are four undergraduates at the Department of Computer Science and Engineering, University of Moratuwa,
             Sri Lanka. We designed this as a project for our semester 5 module Intelligent Systems and the source code
             is available on <a href="https://github.com/sajithdilshan/genetic-algorithms-explained" target="_blank">Github</a>
             under <a href="http://www.wtfpl.net/" target="_blank">wtfpl license.</a></p>
-        <div id="sajith" onclick="location.href='#';" ></div>
-        <div id="vimuth" onclick="location.href='#';" ></div>
-        <div id="tharindu" onclick="location.href='#';" ></div>
-        <div id="mihil" onclick="location.href='#';" ></div>
+
+        <div id="sajith" onclick="location.href='#';"></div>
+        <div id="vimuth" onclick="location.href='#';"></div>
+        <div id="tharindu" onclick="location.href='#';"></div>
+        <div id="mihil" onclick="location.href='#';"></div>
     </div>
 </footer>
 <!-- aboutus Ends -->
