Refactoring and changed incorrect parameters error message

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Oops!! Something is wrong Jimmy</h4>
+                <h4 class="modal-title" id="myModalLabel"><img src='../img/hal.png'>      I'm sorry Dave, I can't let you do that...</h4>
             </div>
             <div class="modal-body" id="model-body-content"></div>
             <div class="modal-footer">
