added about us image (vimuth)

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             under <a href="http://www.wtfpl.net/" target="_blank">wtfpl license.</a></p>
 
         <div id="sajith" onclick="location.href='http://sajithdilshan.github.io/';"></div>
-        <div id="vimuth" onclick="location.href='#';"></div>
+        <div id="vimuth" onclick="location.href='http://lk.linkedin.com/pub/vimuth-fernando/32/820/6a1';"></div>
         <div id="tharindu" onclick="location.href='http://lk.linkedin.com/in/tharinduranasinghe';"></div>
         <div id="mihil" onclick="location.href='#';"></div>
     </div>
