added about us image (mihil)

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         <div id="sajith" onclick="location.href='http://sajithdilshan.github.io/';"></div>
         <div id="vimuth" onclick="location.href='http://lk.linkedin.com/pub/vimuth-fernando/32/820/6a1';"></div>
         <div id="tharindu" onclick="location.href='http://lk.linkedin.com/in/tharinduranasinghe';"></div>
-        <div id="mihil" onclick="location.href='#';"></div>
+        <div id="mihil" onclick="location.href='http://www.linkedin.com/pub/mihil-ranathunga/47/703/b3';"></div>
     </div>
 </footer>
 <!-- aboutus Ends -->
