--- a/index.html
+++ b/index.html
@@ -485,6 +485,10 @@
         <p class="shot-para">The chromosome is considered fitted if the number of conflicts is the lowest. If the
             fittest chromosome is a solution the algorithm ends. If not the circle of n-queen life continues until a
             solution is found or the limit to iterations is reached.</p>
+        <p class="shot-para">Below video will give an overall idea of how we build the complete solution.</p>
+        <div class="sample-img">
+            <iframe width="420" height="315" src="//www.youtube.com/embed/j0c8ynCn2_Y" frameborder="0" allowfullscreen></iframe>
+        </div>
 
     </div>
 </div>
